force-app/main/default/objects/ContentVersion/fields/disco__Comments__c.field-meta.xml
<CustomField>
    <fullName>disco__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>