force-app/main/default/objects/ContentVersion/fields/disco__Image_Tags__c.field-meta.xml
<CustomField>
    <fullName>disco__Image_Tags__c</fullName>
    <label>Image Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>