force-app/main/default/objects/ContentVersion/fields/disco__Image_Type__c.field-meta.xml
<CustomField>
    <fullName>disco__Image_Type__c</fullName>
    <label>Image Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>