force-app/main/default/objects/ContentVersion/fields/disco__Matching_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>disco__Matching_Document_Id__c</fullName>
    <description>Support content image questions in Youreka Fuse. Keeps track of the matching document id for a content image question to prevent duplicates.</description>
    <inlineHelpText>Support content image questions in Youreka Fuse. Keeps track of the matching document id for a content image question to prevent duplicates.</inlineHelpText>
    <label>Matching Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>