force-app/main/default/objects/ContentVersion/fields/disco__Probability__c.field-meta.xml
<CustomField>
    <fullName>disco__Probability__c</fullName>
    <label>Probability</label>
    <length>50</length>
    <type>Text</type>
</CustomField>